--- a/index.html
+++ b/index.html
@@ -265,19 +265,6 @@
               바닐라 자바스크립트 외 라이브 러리를 통하여 동적 제어를 할 수 있습니다.
             </h4>
           </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="Framework_Library">
-      <div class="Framework_Library_box Skiles_box">
-        <div class="Framework_Library_title Skills_tit">
-          <div></div>
-          <h1>Framework & Library</h1>
-          <div></div>
-        </div>
-
-        <div class="Framework_Library_List Skiles_List">
           <div class="Framework_Library_jQuery Skiles_content">
             <div class="jQuery_img">
             </div>
@@ -295,6 +282,38 @@
               동적 제어를 위한 jQuery의 다양한 라이브 러리 및 이벤트 제어가 가능합니다.
             </h4>
           </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="Framework_Library">
+      <div class="Framework_Library_box Skiles_box">
+        <div class="Framework_Library_title Skills_tit">
+          <div></div>
+          <h1>Framework & Library</h1>
+          <div></div>
+        </div>
+
+        <div class="Framework_Library_List Skiles_List">
+
+          <div class="Framework_Library_ParceLnSass Skiles_content">
+            <div class="Sass_img">
+            </div>
+            <div class="Sass_txt Skills_txt">Sass
+              <div class="pro_bar">
+                <div class="progressbar">
+                  <div class="progress-label">25%
+                    <p>80%</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <h4>
+              Parcel-bundler를 이용해 팀프로젝트 제작, Sass를 사용하여</br> 변수 및 불필요한 반복문을 줄이고 CSS 스타일링이 가능합니다.
+            </h4>
+          </div>
+
           <div class="Framework_Library_React Skiles_content">
             <div class="React_img">
             </div>
@@ -313,23 +332,48 @@
               사용한 간단한 개인 프로젝트 경험이 있습니다.
             </h4>
           </div>
-          <div class="Framework_Library_ParceLnSass Skiles_content">
-            <div class="Sass_img">
+
+
+          <div class="Framework_Library_JSX Skiles_content">
+            <div class="JSX_img">
             </div>
-            <div class="Sass_txt Skills_txt">Sass
+            <div class="JSX_txt Skills_txt">JSX
               <div class="pro_bar">
                 <div class="progressbar">
-                  <div class="progress-label">25%
-                    <p>80%</p>
+                  <div class="progress-label">70%
+                    <p>70%</p>
                   </div>
                 </div>
               </div>
             </div>
 
             <h4>
-              Parcel-bundler를 이용해 팀프로젝트 제작, Sass를 사용하여</br> 변수 및 불필요한 반복문을 줄이고 CSS 스타일링이 가능합니다.
+              ★내용넣기
             </h4>
           </div>
+
+
+          <div class="Framework_Library_Bootstrap Skiles_content">
+            <div class="Bootstrap_img">
+            </div>
+            <div class="Bootstrap_txt Skills_txt">
+              <p class="BootColor">Bootstrap</p>
+              <div class="pro_bar">
+                <div class="progressbar">
+                  <div class="progress-label">60%
+                    <p>60%</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <h4>
+              ★내용넣기
+            </h4>
+          </div>
+
+
+
         </div>
       </div>
     </div>
@@ -408,6 +452,21 @@
 
     <div class="CodeReview_Tab Tab1">
 
+      <div class="useSkill_open">
+        펼쳐보기
+      </div>
+      <div class="useSkill">
+        <div class="useSkill_close">접어두기</div>
+        <div class="useSkill_Box useSkill1">HTML</div>
+        <div class="useSkill_Box useSkill2">SASS</div>
+        <div class="useSkill_Box useSkill3">jQuery</div>
+        <div class="useSkill_Box useSkill4">JavaScript</div>
+        <div class="useSkill_Box useSkill5">Git</div>
+        <div class="useSkill_Box useSkill6">GitHub</div>
+        <div class="useSkill_Box useSkill7">VS Code</div>
+        <div class="useSkill_Box useSkill8">XD</div>
+      </div>
+
       <div class="CodeReview_TabBox1">
         <div class="CodeReview_img TeamMain">
           팀프로젝트_이미지(메인)
@@ -443,7 +502,11 @@
 
         <div class="CodeReview_Btn1">
           <input type="button" id="CodeBtn1">
-          <label for="CodeBtn1"><a target="_blank" href="./CSS/Project.pdf">기획서(+아이디어스케치) PDF 열기</a></label>
+          <label for="CodeBtn1"><a target="_blank" href="./CSS/TeamProject.pdf">기획서(+아이디어스케치) PDF 열기</a></label>
+        </div>
+        <div class="CodeReview_Btn16">
+          <input type="button" id="CodeBtn16">
+          <label for="CodeBtn16"><a target="_blank" href="./CSS/TeamProjectDesign.pdf">디자인 시안 PDF 열기</a></label>
         </div>
         <div class="CodeReview_Btn2">
           <input type="button" id="CodeBtn2">
@@ -650,6 +713,25 @@
 
 
     <div class="CodeReview_Tab Tab2">
+
+
+      
+      <div class="useSkill_open">
+        펼쳐보기
+      </div>
+      <div class="useSkill">
+        <div class="useSkill_close">접어두기</div>
+        <div class="useSkill_Box useSkill1">HTML</div>
+        <div class="useSkill_Box useSkill2 Login_CSS">CSS</div>
+        <div class="useSkill_Box useSkill4">JavaScript</div>
+        <div class="useSkill_Box useSkill5">Git</div>
+        <div class="useSkill_Box useSkill6">GitHub</div>
+        <div class="useSkill_Box useSkill7">VS Code</div>
+        <div class="useSkill_Box useSkill8">XD</div>
+      </div>
+
+
+
 
       <div class="CodeReview_TabBox2">
         <div class="CodeReview_img LoginMain">
@@ -898,6 +980,25 @@
 
     <div class="CodeReview_Tab Tab3">
 
+
+      <div class="useSkill_open">
+        펼쳐보기
+      </div>
+      <div class="useSkill">
+        <div class="useSkill_close">접어두기</div>
+        <div class="useSkill_Box useSkill1">HTML</div>
+        <div class="useSkill_Box useSkill2 Login_CSS">CSS</div>
+        <div class="useSkill_Box useSkill3">jQuery</div>
+        <div class="useSkill_Box useSkill4">JavaScript</div>
+        <div class="useSkill_Box useSkill5">Git</div>
+        <div class="useSkill_Box useSkill6">GitHub</div>
+        <div class="useSkill_Box useSkill7">VS Code</div>
+        <div class="useSkill_Box useSkill8">XD</div>
+      </div>
+
+
+
+
       <div class="CodeReview_TabBox3">
         <div class="CodeReview_img SingleMainPC">
           개인프로젝트_이미지(PC.메인)
@@ -1005,15 +1106,15 @@
           <label for="CodeBtn9"><a target="_blank" href="./CSS/SingleProject.pdf">기획서(+아이디어스케치) PDF 열기</a></label>
         </div>
         <div class="CodeReview_Btn9">
-          <input type="button" id="CodeBtn9">
+          <input type="button" id="CodeBtn10">
           <label for="CodeBtn9">코드리뷰</label>
         </div>
         <div class="CodeReview_Btn10">
-          <input type="button" id="CodeBtn10">
+          <input type="button" id="CodeBtn11">
           <label for="CodeBtn10"><a target="_blank" href="https://leegiun.github.io/Dongsuh/">개인프로젝트 페이지 열기</a></label>
         </div>
         <div class="CodeReview_Btn11">
-          <input type="button" id="CodeBtn11">
+          <input type="button" id="CodeBtn12">
           <label for="CodeBtn11"><a target="_blank" href="https://github.com/LeeGiun">Git-Hub로 프로젝트 보기</a></label>
         </div>
 
@@ -1219,6 +1320,27 @@
 
     <div class="CodeReview_Tab Tab4">
 
+
+
+      <div class="useSkill_open">
+        펼쳐보기
+      </div>
+      <div class="useSkill">
+        <div class="useSkill_close">접어두기</div>
+        <div class="useSkill_Box useSkill1">HTML</div>
+        <div class="useSkill_Box useSkill2 Login_CSS">CSS</div>
+        <div class="useSkill_Box useSkill9">React</div>
+        <div class="useSkill_Box useSkill10">JSX</div>
+        <div class="useSkill_Box useSkill11">Bootstrap</div>
+        <div class="useSkill_Box useSkill5">Git</div>
+        <div class="useSkill_Box useSkill6">GitHub</div>
+        <div class="useSkill_Box useSkill7">VS Code</div>
+      </div>
+
+
+
+
+
       <div class="CodeReview_TabBox4">
         <div class="CodeReview_img">
           리액트 사이트제작_이미지
@@ -1248,20 +1370,13 @@
 
 
 
-
-
-          <!-- <div class="CodeReview_Btn12">
-            <input type="button" id="CodeBtn12">
-            <label for="CodeBtn12"><a target="_blank"
-                href="./CSS/Project.pdf">기획서 PDF 열기</a></label>
-          </div> -->
           <div class="CodeReview_Btn13">
             <input type="button" id="CodeBtn13">
             <label for="CodeBtn13">코드리뷰</label>
           </div>
           <div class="CodeReview_Btn14">
             <input type="button" id="CodeBtn14">
-            <label for="CodeBtn14"><a target="_blank" href="https://leegiun.github.io/FILA/">리액트 프로젝트 페이지 열기</a></label>
+            <label for="CodeBtn14"><a target="_blank" href="#!">리액트 프로젝트 페이지 열기</a></label>
           </div>
           <div class="CodeReview_Btn15">
             <input type="button" id="CodeBtn15">
