--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             </div>
 
             <h4>
-              ★내용넣기
+              JSX를 사용하여 여러개의 컴포넌트를 생성 후 상태 관리와 이벤트 처리를</br> 수행하여 프로젝트를 제작한 경험이 있습니다.
             </h4>
           </div>
 
@@ -368,7 +368,7 @@
             </div>
 
             <h4>
-              ★내용넣기
+              Bootstrap을 이용하여 Table, Container, Row, Col 컴포넌트를 사용하여 레이아웃을 구성 후 프로젝트를 제작한 경험이 있습니다.
             </h4>
           </div>
 
@@ -1366,7 +1366,7 @@
         <div class="CodeReview_TabBox_Btn">
 
 
-          <div class="ReactPageBtnBox">
+<!--           <div class="ReactPageBtnBox">
             <div class="CodeReview_Btn_ReactPageBtn1">
               <input type="button" id="ReactPageBtn1">
               <label for="ReactPageBtn1">[Main Page]</label>
@@ -1383,7 +1383,7 @@
                 [Detail Page]
               </label>
             </div>
-          </div>
+          </div> -->
 
 
 
@@ -1393,7 +1393,7 @@
           </div>
           <div class="CodeReview_Btn14">
             <input type="button" id="CodeBtn14">
-            <label for="CodeBtn14"><a target="_blank" href="#!">리액트 프로젝트 페이지 열기</a></label>
+            <label for="CodeBtn14"><a target="_blank" href="https://leegiun.github.io/React_SlouBed/">리액트 프로젝트 페이지 열기</a></label>
           </div>
           <div class="CodeReview_Btn15">
             <input type="button" id="CodeBtn15">
