--- a/index.html
+++ b/index.html
@@ -1425,7 +1425,7 @@
                 
 
                 <div class="code_content_tit tit_React1">
-                  <h1>📍 리액트프로젝트 컨텐츠1
+                  <h1>📍 메인 페이지 👉 Swiper 라이브러리 사용
                     <span>접어두기<i class="fas fa-caret-up"></i></span>
                   </h1>
                 </div>
@@ -1433,10 +1433,8 @@
                   <div class="REACT_Swiper1">
                     <div class="ReactSwiper1">
                       <div class="swiper-wrapper">
-                        <div class="swiper-slide">1</div>
-                        <div class="swiper-slide">2</div>
-                        <div class="swiper-slide">3</div>
-                        <div class="swiper-slide">4</div>
+                        <div class="swiper-slide"></div>
+                        <div class="swiper-slide"></div>
                       </div>
                       <div class="swiper-button-next"></div>
                       <div class="swiper-button-prev"></div>
@@ -1445,24 +1443,15 @@
                   </div>
                 </div>
                 <div class="code_content_txt code_content_txt_React1">
-                  <p>🔖 </p>
+                  <p>🔖 스와이퍼 모듈을 설치한 후 Swiper 컴포넌트를 불러와서
+                  <br/>&nbsp각 필요한 컨텐츠 prop를 설정하여 모듈이 적용하였습니다.  </p>
                   </br>
-                  </br>
-                  <p>🔖 </p>
-
-                  </br>
-                  </br>
-                  <p>🔖 </p>
-
-                  </br>
-                  </br>
-                  <p>🔖 </p>
                 </div>
 
 
 
                 <div class="code_content_tit tit_React2">
-                  <h1>📍 리액트프로젝트 컨텐츠2
+                  <h1>📍 서브 페이지 👉 Json 파일을 이용한 Data 불러오기
                     <span>접어두기<i class="fas fa-caret-up"></i></span>
                   </h1>
                 </div>
@@ -1470,10 +1459,10 @@
                   <div class="REACT_Swiper2">
                     <div class="ReactSwiper2">
                       <div class="swiper-wrapper">
-                        <div class="swiper-slide">1</div>
-                        <div class="swiper-slide">2</div>
-                        <div class="swiper-slide">3</div>
-                        <div class="swiper-slide">4</div>
+                        <div class="swiper-slide"></div>
+                        <div class="swiper-slide"></div>
+                        <div class="swiper-slide"></div>
+                        <div class="swiper-slide"></div>
                       </div>
                       <div class="swiper-button-next"></div>
                       <div class="swiper-button-prev"></div>
@@ -1482,18 +1471,33 @@
                   </div>
                 </div>
                 <div class="code_content_txt code_content_txt_React2">
-                  <p>🔖 </p>
+                  <p>🔖 GraphQL Apollo서버로 Csv파일을 .Json로 각데이터를
+                    <br/>&nbsp구축해 사용했습니다.</p>
                   </br>
                   </br>
-                  <p>🔖 </p>
+                  <p>🔖 useEffect React Hook 사용, 컴포넌트가 마운트될 때
+                    <br/>&nbsp메인, 서브페이지를 구분하여 배경색이 달라지도록 하였고,
+                    <br/>&nbsp또한, 장바구니 처리를 위해 ./option/store 로컬파일에서
+                    <br/>&nbspaddItem 액션생성 함수를 불러오고, useDispatch Hook을
+                    <br/>&nbsp사용하여 리덕스 스토어의 Dispatch 함수를 가져왔습니다.</p>
 
                   </br>
                   </br>
-                  <p>🔖 </p>
+                  <p>🔖 Link 컴포넌트로 페이지 이동이 될 수 있도록 구현하였고,
+                    <br/>&nbspJson파일 내 데이터를 가져와 product 변수를 만들어
+                    <br/>&nbspmap을 통해 배열 각요소에 대해 함수 호출 후 
+                    Bootstrap
+                    <br/>&nbspCol컴포넌트를 생성하였습니다.</p>
 
                   </br>
                   </br>
-                  <p>🔖 </p>
+                  <p>🔖 Json 파일 내 데이터를 불러온 Product 변수를 통해
+                    <br/>&nbsp이미지를 구현 및 불필요한 Data는 나타나지 않도록 했으며,
+                    <br/>&nbsp금액의 원 단위와 장바구니 페이지에 Data가 전달되도록
+                    <br/>&nbsp구현하였습니다.</p>
+                  </br>
+                  <p>🔖 Route를 통해 각 서브페이지 이동 및 디테일 페이지가
+                    <br/>&nbsp구현되도록 하였습니다.</p>
                 </div>
 
 
@@ -1501,7 +1505,7 @@
 
 
                 <div class="code_content_tit tit_React3">
-                  <h1>📍 리액트프로젝트 컨텐츠3
+                  <h1>📍 디테일 페이지 👉 Json 파일을 이용한 Data 불러오기
                     <span>접어두기<i class="fas fa-caret-up"></i></span>
                   </h1>
                 </div>
@@ -1509,10 +1513,9 @@
                   <div class="REACT_Swiper3">
                     <div class="ReactSwiper3">
                       <div class="swiper-wrapper">
-                        <div class="swiper-slide">1</div>
-                        <div class="swiper-slide">2</div>
-                        <div class="swiper-slide">3</div>
-                        <div class="swiper-slide">4</div>
+                        <div class="swiper-slide"></div>
+                        <div class="swiper-slide"></div>
+                        <div class="swiper-slide"></div>
                       </div>
                       <div class="swiper-button-next"></div>
                       <div class="swiper-button-prev"></div>
@@ -1521,18 +1524,24 @@
                   </div>
                 </div>
                 <div class="code_content_txt code_content_txt_React3">
-                  <p>🔖 </p>
+                  <p>🔖 useEffect React Hook 사용, 컴포넌트가 마운트될 때
+                    <br/>&nbsp메인, 서브페이지를 구분하여 배경색이 달라지도록 하였고,
+                    <br/>&nbspuseState를 통해 상태 변경이 될 수 있도록 구현하였습니다.
+                  </p>
                   </br>
                   </br>
-                  <p>🔖 </p>
+                  <p>🔖 서브페이지에서 이동된 상품에 따라 이미지를 구현하고,
+                    <br/>&nbsp필요한 정보를 불러오도록 구현할 수 있도록 하였습니다.</p>
 
                   </br>
                   </br>
-                  <p>🔖 </p>
+                  <p>🔖 금액의 원 단위가 표시될 수 있도록 하였으며,
+                    <br/>&nbsp수량이 카운트될 때마다 금액이 변동되도록 구현하였습니다.
+                    <br/>&nbsp
+                    또한, 사이즈/수량을 선택 후 장바구니를 누를 경우
+                    <br/>&nbsp데이터가 전달될 수 있도록 구현하였습니다.</p>
 
                   </br>
-                  </br>
-                  <p>🔖 </p>
                 </div>
 
 
@@ -1540,7 +1549,7 @@
 
 
                 <div class="code_content_tit tit_React4">
-                  <h1>📍 리액트프로젝트 컨텐츠4
+                  <h1>📍 장바구니 페이지 👉 Redux Toolkit으로 장바구니 구현, Bootstrap Style 적용
                     <span>접어두기<i class="fas fa-caret-up"></i></span>
                   </h1>
                 </div>
@@ -1548,10 +1557,8 @@
                   <div class="REACT_Swiper4">
                     <div class="ReactSwiper4">
                       <div class="swiper-wrapper">
-                        <div class="swiper-slide">1</div>
-                        <div class="swiper-slide">2</div>
-                        <div class="swiper-slide">3</div>
-                        <div class="swiper-slide">4</div>
+                        <div class="swiper-slide"></div>
+                        <div class="swiper-slide"></div>
                       </div>
                       <div class="swiper-button-next"></div>
                       <div class="swiper-button-prev"></div>
@@ -1560,18 +1567,20 @@
                   </div>
                 </div>
                 <div class="code_content_txt code_content_txt_React4">
-                  <p>🔖 </p>
+                  <p>🔖 Bootstrap Table 컴포넌트를 불러와 Style 적용했고, Redux store의 상태를 가져와 장바구니로 전달된 Data의
+                    <br/>&nbsp상품 목록을 표시하게끔 구현하였습니다.</p>
                   </br>
                   </br>
-                  <p>🔖 </p>
+                  <p>🔖 장바구니에 불러온 Data들의 갯수를 변경하거나 삭제하도록
+                    <br/>&nbsp버튼을 구현하였습니다.
+                  </p>
 
                   </br>
                   </br>
-                  <p>🔖 </p>
+                  <p>🔖 Store에는 Redux store를 설정, Item을 넣거나 변경,
+                    <br/>&nbsp삭제하도록 기능 구현을 하였습니다.</p>
 
                   </br>
-                  </br>
-                  <p>🔖 </p>
                 </div>
 
 
